# node-tantivy

./: Cargo.toml  LICENSE  README.md  index.d.ts  index.js  main.mjs  package.json
inner_wrap/: Cargo.toml
inner_wrap/src/: lib.rs
npm/darwin-x64/: package.json
npm/linux-x64-gnu/: package.json
npm/win32-x64-msvc/: package.json
src/: index_reader.rs  index_reader_builder.rs  lib.rs  old.rs  oldsearch.rs  search.rs  searcher.rs  structs.rs
src/collector/: mod.rs  top_docs.rs
src/index/: index.rs  index_meta.rs  index_settings.rs  mod.rs  segment_component.rs  segment_id.rs  segment_meta.rs
src/query/: mod.rs  query.rs  query_parser.rs
src/schema/: date_time_precision.rs  field.rs  field_entry.rs  field_type.rs  mod.rs  options.rs  schema.rs  schema_builder.rs
src/store/: compressor.rs  mod.rs
test/: index.spec.mjs  old.spec.mjs
