[package]
edition = "2021"
name = "tantivy"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.16", default-features = false, features = ["napi8"] }
napi-derive = "2.16.13"
serde_json = "1.0.139"
tantivy = "0.22"

[build-dependencies]
napi-build = "2.1.5"

[profile.release]
lto = true
strip = "symbols"
